MID-1939 implementation - not yet finished.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/ObjectPolicyConfigurationEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/ObjectPolicyConfigurationEditor.properties
@@ -14,6 +14,6 @@
 # limitations under the License.
 #
 
-DropDownChoicePanel.notDefined=Undefined
-nullValid=Choose one
-select.null=Choose one
+objectPolicyConfigurationEditor.label=Object Policies
+objectPolicyConfigurationEditor.name.placeholder=Insert object policy
+objectPolicyConfigurationEditor.button.edit=Edit
