--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ObjectPolicyDialog.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ObjectPolicyDialog.properties
@@ -14,6 +14,12 @@
 # limitations under the License.
 #
 
-DropDownChoicePanel.notDefined=Undefined
+ObjectPolicyDialog.label.new=Create new Object Policy
+ObjectPolicyDialog.label.edit=Edit Object Policy
+ObjectPolicyDialog.type=Object type
+ObjectPolicyDialog.template=Object template
+ObjectPolicyDialog.propertyConstraint=Property constraint
+ObjectPolicyDialog.property.placeholder=Insert property path
+ObjectPolicyDialog.button.save=Save
+ObjectPolicyDialog.button.cancel=Cancel
 nullValid=Choose one
-select.null=Choose one
