MID-1939 - editor for object policies on system configuration pages finished

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ObjectPolicyDialog.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ObjectPolicyDialog.properties
@@ -14,8 +14,7 @@
 # limitations under the License.
 #
 
-ObjectPolicyDialog.label.new=Create new Object Policy
-ObjectPolicyDialog.label.edit=Edit Object Policy
+ObjectPolicyDialog.label=Create/Edit Object Policy
 ObjectPolicyDialog.type=Object type
 ObjectPolicyDialog.template=Object template
 ObjectPolicyDialog.propertyConstraint=Property constraint
