MID-2005 - ExtensionType editor for Role/Org. unit editors implementation

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/roles/PageRole.properties
@@ -15,6 +15,7 @@
 #
 PageRoleEditor.subtitle.basic=Basic
 PageRoleEditor.subtitle.activation=Activation
+PageRoleEditor.subtitle.extension=Extension
 PageRoleEditor.title.newRole=Create
 PageRoleEditor.subtitle.newRole=new role
 PageRoleEditor.title.editingRole=Edit
@@ -27,5 +28,6 @@ PageRoleEditor.label.description=Description
 PageRoleEditor.label.type=Type
 PageRoleEditor.label.requestable=Requestable
 PageRoleEditor.label.identifier=Identifier
-
+PageRoleEditor.extension=Extension
+PageRoleEditor.message.cantCreateExtensionDelta=Can't create delta for role extension
 
