few minor (mostly visual) improvements in Object Policies editor

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ObjectPolicyDialog.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/configuration/component/ObjectPolicyDialog.properties
@@ -14,11 +14,12 @@
 # limitations under the License.
 #
 
-ObjectPolicyDialog.label=Create/Edit Object Policy
+ObjectPolicyDialog.label=Edit Object Policy
 ObjectPolicyDialog.type=Object type
 ObjectPolicyDialog.template=Object template
 ObjectPolicyDialog.propertyConstraint=Property constraint
 ObjectPolicyDialog.property.placeholder=Insert property path
 ObjectPolicyDialog.button.save=Save
 ObjectPolicyDialog.button.cancel=Cancel
+ObjectPolicyDialog.label.oidBound.help=Oid bound - The property value will be bound to OID. This property will be set to the value of OID and it cannot be changed.
 nullValid=Choose one
