--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -59,7 +59,7 @@
         <slf4j.version>1.6.4</slf4j.version>
         <spring.version>3.1.0.RELEASE</spring.version>
         <spring.security.version>3.1.0.RELEASE</spring.security.version>
-        <testng.version>6.1.1</testng.version>
+        <testng.version>6.8.8</testng.version>
         <xml.resolver.version>1.2</xml.resolver.version>
         <cron4j.version>2.2.3</cron4j.version>
         <hibernate.version>4.1.12.Final</hibernate.version>
@@ -736,7 +736,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-surefire-plugin</artifactId>
-                        <version>2.10</version>
+                        <version>2.17</version>
                         <configuration>
                             <forkMode>once</forkMode>
                             <!-- 							<runOrder>alphabetical</runOrder> -->
@@ -748,6 +748,12 @@
                             <suiteXmlFiles>
                                 <suiteXmlFile>testng.xml</suiteXmlFile>
                             </suiteXmlFiles>
+                        	<properties>
+								<property>
+									<name>listener</name>
+									<value>com.evolveum.midpoint.tools.testng.TestMethodLoggerListener</value>
+								</property>
+            				</properties>
                             <systemPropertyVariables>
                                 <midpoint.home>target/midpoint-home</midpoint.home>
                                 <java.util.logging.config.file>${project.build.directory}/test-classes/logging.properties</java.util.logging.config.file>
@@ -767,7 +773,7 @@
                             <dependency>
                                 <groupId>org.apache.maven.surefire</groupId>
                                 <artifactId>surefire-testng</artifactId>
-                                <version>2.9</version>
+                                <version>2.17</version>
                             </dependency>
                         </dependencies>
                     </plugin>
