--- a/build-system/pom.xml
+++ b/build-system/pom.xml
@@ -738,7 +738,9 @@
                         <artifactId>maven-surefire-plugin</artifactId>
                         <version>2.17</version>
                         <configuration>
-                            <forkMode>once</forkMode>
+                        	<parallel>false</parallel>
+                        	<forkCount>1</forkCount>
+                      		<reuseForks>true</reuseForks>
                             <!-- 							<runOrder>alphabetical</runOrder> -->
                             <redirectTestOutputToFile>true</redirectTestOutputToFile>
                             <!-- 							<threadCount>1</threadCount> -->
@@ -751,7 +753,7 @@
                         	<properties>
 								<property>
 									<name>listener</name>
-									<value>com.evolveum.midpoint.tools.testng.TestMethodLoggerListener</value>
+									<value>com.evolveum.midpoint.tools.testng.TestListener</value>
 								</property>
             				</properties>
                             <systemPropertyVariables>
