SchemaHandling editor implementation in progress. Far from over.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaHandlingStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaHandlingStep.properties
@@ -14,3 +14,6 @@
 # limitations under the License.
 #
 WizardStep.title=Schema handling
+SchemaHandlingStep.label.objectTypes=Object Types
+SchemaHandlingStep.button.add=Add New Object Type
+SchemaHandlingStep.label.newObjectType=New object type
