Resource Wizard + SchemaHandling editor - objectType editor implementation continues

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -519,3 +519,5 @@ operation.com.evolveum.midpoint.web.page.admin.resources.content.dto.AccountCont
 operation.com.evolveum.midpoint.model.controller.ModelController.searchObjects=Search objects (Model)
 operation.com.evolveum.midpoint.model.impl.controller.ModelDiagController.repositorySelfTest.user=Repository self test, user (Model)
 operation.com.evolveum.midpoint.common.crypto.CryptoUtil.securitySelfTest=Security self test
+
+TextField.universal.placeholder=Insert value
