Resource Wizard update - SchemaHandling editor - added editors for Resource iteration func., Resource Protected accounts and Resource dependencies.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceDependencyEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceDependencyEditor.properties
@@ -13,3 +13,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+ResourceDependencyEditor.label=Edit Dependencies
+ResourceDependencyEditor.label.order=Order
+ResourceDependencyEditor.label.strictness=Strictness
+ResourceDependencyEditor.label.kind=Kind
+ResourceDependencyEditor.label.intent=Intent
+ResourceDependencyEditor.label.resourceRef=Resource ref
+ResourceDependencyEditor.label.button.add=Add resource dependency
+ResourceObjectTypeDependencyStrictnessType.STRICT=Strict
+ResourceObjectTypeDependencyStrictnessType.RELAXED=Relaxed
+ResourceObjectTypeDependencyStrictnessType.LAX=Lax
+ShadowKindType.ACCOUNT=Account
+ShadowKindType.ENTITLEMENT=Entitlement
+ShadowKindType.GENERIC=Generic
