--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceIterationEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceIterationEditor.properties
@@ -13,3 +13,16 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+ResourceIterationEditor.label=Edit Resource Iteration Configuration
+ResourceIterationEditor.label.maxIteration=Max iteration
+ResourceIterationEditor.label.tokenExpression=Token expression
+ResourceIterationEditor.label.preIterationCondition=Pre-iteration condition
+ResourceIterationEditor.label.postIterationCondition=Post-iteration condition
+ResourceIterationEditor.label.description=Description
+ResourceIterationEditor.label.extension=Extension
+ResourceIterationEditor.label.stringFilter=String filter
+ResourceIterationEditor.label.variable=Variable
+ResourceIterationEditor.label.returnMultiplicity=Return multiplicity
+ResourceIterationEditor.label.expressionEvaluator=Expression evaluator
+ExpressionReturnMultiplicityType.SINGLE=Single
+ExpressionReturnMultiplicityType.MULTI=Multi
