--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceprotectedEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceprotectedEditor.properties
@@ -13,3 +13,10 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+ResourceProtectedEditor.label=Edit Protected Accounts
+ResourceProtectedEditor.label.name=Name
+ResourceProtectedEditor.label.uid=Uid
+ResourceProtectedEditor.label.filter=Filter
+ResourceProtectedEditor.label.description=Description
+ResourceProtectedEditor.label.filterClause=Filter clause
+ResourceProtectedEditor.button.add=Add protected account
