SchemaHandling editor update - improvements in work with expressions in outbounds and inbounds

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceIterationEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceIterationEditor.properties
@@ -24,5 +24,12 @@ ResourceIterationEditor.label.stringFilter=String filter
 ResourceIterationEditor.label.variable=Variable
 ResourceIterationEditor.label.returnMultiplicity=Return multiplicity
 ResourceIterationEditor.label.expressionEvaluator=Expression evaluator
+ResourceIterationEditor.label.expressionType=Expression type
+ResourceIterationEditor.label.expression=Expression
 ExpressionReturnMultiplicityType.SINGLE=Single
 ExpressionReturnMultiplicityType.MULTI=Multi
+ExpressionEvaluatorType.LITERAL=Literal
+ExpressionEvaluatorType.AS_IS=As is
+ExpressionEvaluatorType.PATH=Path
+ExpressionEvaluatorType.SCRIPT=Script
+ExpressionEvaluatorType.GENERATE=Generate
