--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.properties
@@ -39,3 +39,4 @@ ExpressionEvaluatorType.AS_IS=As is
 ExpressionEvaluatorType.PATH=Path
 ExpressionEvaluatorType.SCRIPT=Script
 ExpressionEvaluatorType.GENERATE=Generate
+ExpressionEvaluatorType.null=Choose one
