ResourceWizard - SchemaHandling editor update - work on expression editor in mappings and iteration editor. Still not finished completely.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceIterationEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceIterationEditor.properties
@@ -25,6 +25,8 @@ ResourceIterationEditor.label.variable=Variable
 ResourceIterationEditor.label.returnMultiplicity=Return multiplicity
 ResourceIterationEditor.label.expressionEvaluator=Expression evaluator
 ResourceIterationEditor.label.expressionType=Expression type
+ResourceIterationEditor.label.language=Language
+ResourceIterationEditor.label.policyRef=Policy ref.
 ResourceIterationEditor.label.expression=Expression
 ExpressionReturnMultiplicityType.SINGLE=Single
 ExpressionReturnMultiplicityType.MULTI=Multi
@@ -33,3 +35,6 @@ ExpressionEvaluatorType.AS_IS=As is
 ExpressionEvaluatorType.PATH=Path
 ExpressionEvaluatorType.SCRIPT=Script
 ExpressionEvaluatorType.GENERATE=Generate
+Language.GROOVY=Groovy
+Language.XPATH=XPath
+Language.JAVASCRIPT=Javascript
