--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.properties
@@ -27,6 +27,8 @@ MappingEditorDialog.label.source=Source
 MappingEditorDialog.label.target=Target
 MappingEditorDialog.label.expression=Expression
 MappingEditorDialog.label.expressionType=Expression type
+MappingEditorDialog.label.language=Language
+MappingEditorDialog.label.passPolicyRef=Policy ref.
 MappingEditorDialog.label.condition=Condition
 MappingEditorDialog.label.conditionType=Condition type
 MappingEditorDialog.button.cancel=Cancel
@@ -39,4 +41,7 @@ ExpressionEvaluatorType.AS_IS=As is
 ExpressionEvaluatorType.PATH=Path
 ExpressionEvaluatorType.SCRIPT=Script
 ExpressionEvaluatorType.GENERATE=Generate
+Language.GROOVY=Groovy (default)
+Language.XPATH=XPath
+Language.JAVASCRIPT=Javascript
 ExpressionEvaluatorType.null=Choose one
