Resource Wizard - SchemaHandling update - imrpoved work with QNames (refs in attribute and association editors, vallue and associationAttributes etc.) + more minor improvements

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaHandlingStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaHandlingStep.properties
@@ -42,3 +42,5 @@ AssignmentPolicyEnforcementType.RELATIVE=Relative
 
 SchemaHandlingStep.message.errorLoadingObjectTypeList=Couldn't load object class list from resource. Error:
 SchemaHandlingStep.message.validationError=Inserted objectClass value: '{0}' is not valid. Please provide valid objectClass value.
+SchemaHandlingStep.message.selectObjectClassAttr=Please provide 'Object class' attribute before creating resource attribute.
+SchemaHandlingStep.message.selectObjectClassAss=Please provide 'Object class' attribute before creating resource association.
