--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAttributeEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAttributeEditor.properties
@@ -16,6 +16,7 @@
 ResourceAttributeEditor.label.edit=Edit '{0}' Attribute
 ResourceAttributeEditor.label.new=Create new attribute
 ResourceAttributeEditor.label.reference=Ref.
+ResourceAttributeEditor.label.allow=Allow non-schema ref.
 ResourceAttributeEditor.label.displayName=Display name
 ResourceAttributeEditor.label.description=Description
 ResourceAttributeEditor.label.limitations=Limitations
@@ -27,5 +28,6 @@ ResourceAttributeEditor.label.fetchStrategy=Fetch Strategy
 ResourceAttributeEditor.label.matchingRule=Matching rule
 ResourceAttributeEditor.label.outbound=Outbound
 ResourceAttributeEditor.label.inbound=Inbound
+ResourceAttributeEditor.message.cantParseSchema=Couldn't parse resource schema
 AttributeFetchStrategyType.IMPLICIT=Implicit
 AttributeFetchStrategyType.EXPLICIT=Explicit
