--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.properties
@@ -25,6 +25,7 @@ ResourceAssociationEditor.label.association=Association specific attributes
 ResourceAssociationEditor.label.resourceItem=ResourceItem specific attributes
 
 ResourceAssociationEditor.label.reference=Ref.
+ResourceAssociationEditor.label.allow=Allow non-schema ref.
 ResourceAssociationEditor.label.displayName=Display name
 ResourceAssociationEditor.label.description=Description
 ResourceAssociationEditor.label.limitations=Limitations
@@ -36,6 +37,8 @@ ResourceAssociationEditor.label.fetchStrategy=Fetch Strategy
 ResourceAssociationEditor.label.matchingRule=Matching rule
 ResourceAssociationEditor.label.outbound=Outbound
 ResourceAssociationEditor.label.inbound=Inbound
+ResourceAssociationEditor.message.cantParseSchema=Couldn't parse resource schema
+
 AttributeFetchStrategyType.IMPLICIT=Implicit
 AttributeFetchStrategyType.EXPLICIT=Explicit
 
