Resource Wizard, Schema Handling step update - save functionality completed + many minor improvements and small fixes made along the way.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaHandlingStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SchemaHandlingStep.properties
@@ -44,3 +44,4 @@ SchemaHandlingStep.message.errorLoadingObjectTypeList=Couldn't load object class
 SchemaHandlingStep.message.validationError=Inserted objectClass value: '{0}' is not valid. Please provide valid objectClass value.
 SchemaHandlingStep.message.selectObjectClassAttr=Please provide 'Object class' attribute before creating resource attribute.
 SchemaHandlingStep.message.selectObjectClassAss=Please provide 'Object class' attribute before creating resource association.
+SchemaHandlingStep.message.saveError=Couldn't save schema handling, {0}
