--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.properties
@@ -45,3 +45,5 @@ Language.GROOVY=Groovy (default)
 Language.XPATH=XPath
 Language.JAVASCRIPT=Javascript
 ExpressionEvaluatorType.null=Choose one
+
+MappingEditorDialog.message.cantSave=Couldn't save mapping. Reason:
