--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResources.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/resources/PageResources.properties
@@ -31,6 +31,7 @@ pageResources.connector.port=Port
 pageResources.connector.timeout=Timeout
 pageResources.connector.protectConnection=Protected
 pageResources.inlineMenuItem.deleteSyncToken=Delete Sync. Token
+pageResources.inlineMenuItem.editResource=Edit Resource
 pageResources.button.discoveryRemote=Discovery
 pageResources.button.search=Search
 pageResources.searchText.placeholder=Name
