Resource Wizard - Synchronization Step implementation - work in progress, do NOT use yet

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SynchronizationStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SynchronizationStep.properties
@@ -14,3 +14,10 @@
 # limitations under the License.
 #
 WizardStep.title=Synchronization
+SynchronizationStep.label.syncObjectHeader=Sync. Objects
+SynchronizationStep.label.newObjectType=New sync. object type
+SynchronizationStep.label.emptyDisplayName=--Select sync object to edit--
+
+SynchronizationStep.button.add=Add Synchronization Object
+
+SynchronizationStep.message.errorLoadingObjectSyncList=Couldn't load object synchronization list from resource. Error:
