--- a/gui/admin-gui/pom.xml
+++ b/gui/admin-gui/pom.xml
@@ -202,11 +202,21 @@
             <artifactId>admin-gui-en-US</artifactId>
             <version>3.1-SNAPSHOT</version>
         </dependency>
-	    <!--<dependency>-->
-            <!--<groupId>com.evolveum.midpoint.gui</groupId>-->
-            <!--<artifactId>admin-gui-sk-SK</artifactId>-->
-            <!--<version>2.3-SNAPSHOT</version>-->
-        <!--</dependency>-->
+	    <dependency>
+            <groupId>com.evolveum.midpoint.gui</groupId>
+            <artifactId>admin-gui-sk-SK</artifactId>
+            <version>3.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.evolveum.midpoint.gui</groupId>
+            <artifactId>admin-gui-tr-TR</artifactId>
+            <version>3.1-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.evolveum.midpoint.gui</groupId>
+            <artifactId>admin-gui-es-ES</artifactId>
+            <version>3.1-SNAPSHOT</version>
+        </dependency>
 
         <!-- JDBC DRIVERS -->
         <dependency>
