Resource Wizard - SynchronizationStep update - SynchronizationReaction + SynchronizationAction editors implementation

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SynchronizationStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SynchronizationStep.properties
@@ -35,5 +35,9 @@ SynchronizationStep.label.reaction=Reaction
 
 SynchronizationStep.button.add=Add Synchronization Object
 
+ShadowKindType.ACCOUNT=Account
+ShadowKindType.ENTITLEMENT=Entitlement
+ShadowKindType.GENERIC=Generic
+
 SynchronizationStep.message.errorLoadingObjectSyncList=Couldn't load object synchronization list from resource. Error:
 SynchronizationStep.message.errorLoadingObjectTemplates=Couldn't load object templates from repository.
