--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/SynchronizationReactionEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/SynchronizationReactionEditor.properties
@@ -13,3 +13,18 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+SynchronizationReactionEditor.label.edit=Edit '{0}' Reaction
+SynchronizationReactionEditor.label.new=Create New Reaction
+SynchronizationReactionEditor.label.name=Name
+SynchronizationReactionEditor.label.description=Description
+SynchronizationReactionEditor.label.situation=Situation
+SynchronizationReactionEditor.label.channel=Channel
+SynchronizationReactionEditor.label.synchronize=Synchronize
+SynchronizationReactionEditor.label.reconcile=Reconcile
+SynchronizationReactionEditor.label.objectTemplateRef=Object template ref.
+SynchronizationReactionEditor.label.action  =Action
+SynchronizationSituationType.DELETED=Deleted
+SynchronizationSituationType.UNMATCHED=Unmatched
+SynchronizationSituationType.DISPUTED=Disputed
+SynchronizationSituationType.LINKED=Linked
+SynchronizationSituationType.UNLINKED=Unlinked
