Fixing bugs, adding Icons and basic i18n.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -185,6 +185,15 @@ AssignmentPolicyEnforcementType.MARK=Mark
 AssignmentPolicyEnforcementType.LEGALIZE=Legalize
 AssignmentPolicyEnforcementType.FULL=Full
 
+EventType.NOTIFICATIONS=Sending notifications
+EventType.WORKFLOWS=Considering or starting workflows
+EventType.FOCUS_OPERATION=Operation on focus object (repository)
+EventType.RESOURCE_OBJECT_OPERATION=Operation on resource object
+
+ShadowKindType.ACCOUNT=Account
+ShadowKindType.ENTITLEMENT=Entitlement
+ShadowKindType.GENERIC=Generic object
+
 MailTransportSecurityType.NONE=None
 MailTransportSecurityType.STARTTLS_ENABLED=StartTLS enabled
 MailTransportSecurityType.STARTTLS_REQUIRED=StartTLS required
