Better names for classes.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -185,10 +185,10 @@ AssignmentPolicyEnforcementType.MARK=Mark
 AssignmentPolicyEnforcementType.LEGALIZE=Legalize
 AssignmentPolicyEnforcementType.FULL=Full
 
-EventType.NOTIFICATIONS=Sending notifications
-EventType.WORKFLOWS=Considering or starting workflows
-EventType.FOCUS_OPERATION=Operation on focus object (repository)
-EventType.RESOURCE_OBJECT_OPERATION=Operation on resource object
+ActivityType.NOTIFICATIONS=Sending notifications
+ActivityType.WORKFLOWS=Considering or starting workflows
+ActivityType.FOCUS_OPERATION=Operation on focus object (repository)
+ActivityType.RESOURCE_OBJECT_OPERATION=Operation on resource object
 
 ShadowKindType.ACCOUNT=Account
 ShadowKindType.ENTITLEMENT=Entitlement
