Resource Wizard - Sync Step update - fixing incorrect values when editing sync actions + improved work with resource channels in mappings etc.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/SynchronizationActionEditorDialog.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/SynchronizationActionEditorDialog.properties
@@ -22,14 +22,11 @@ SynchronizationActionEditorDialog.button.save=Save
 SynchronizationActionEditorDialog.button.cancel=Cancel
 BeforeAfterType.BEFORE=Before
 BeforeAfterType.AFTER=After
-HandlerUriActions.ACTION_SYNCHRONIZE=Synchronize
-HandlerUriActions.ACTION_ADD_USER=Add User
-HandlerUriActions.ACTION_MODIFY_USER=Modify User
-HandlerUriActions.ACTION_DISABLE_USER=Disable User
-HandlerUriActions.ACTION_DELETE_USER=Delete User
-HandlerUriActions.ACTION_ADD_ACCOUNT=Add Account
-HandlerUriActions.ACTION_LINK_ACCOUNT=Link Account
-HandlerUriActions.ACTION_UNLINK_ACCOUNT=Unlink Account
-HandlerUriActions.ACTION_DELETE_ACCOUNT=Delete Account
-HandlerUriActions.ACTION_DISABLE_ACCOUNT=Disable Account
-HandlerUriActions.ACTION_MODIFY_PASSWORD=Modify Password
+HandlerUriActions.ACTION_LINK=Link
+HandlerUriActions.ACTION_UNLINK=Unlink
+HandlerUriActions.ACTION_ADD_FOCUS=Add focus
+HandlerUriActions.ACTION_DELETE_FOCUS=Delete focus
+HandlerUriActions.ACTION_INACTIVE_FOCUS=Inactive focus
+HandlerUriActions.ACTION_DELETE_SHADOW=Delete shadow
+HandlerUriActions.ACTION_INACTIVE_SHADOW=Inactive shadow
+
