--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/SynchronizationReactionEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/SynchronizationReactionEditor.properties
@@ -22,9 +22,17 @@ SynchronizationReactionEditor.label.channel=Channel
 SynchronizationReactionEditor.label.synchronize=Synchronize
 SynchronizationReactionEditor.label.reconcile=Reconcile
 SynchronizationReactionEditor.label.objectTemplateRef=Object template ref.
-SynchronizationReactionEditor.label.action  =Action
+SynchronizationReactionEditor.label.action=Action
+SynchronizationSituationType.null=Choose One
 SynchronizationSituationType.DELETED=Deleted
 SynchronizationSituationType.UNMATCHED=Unmatched
 SynchronizationSituationType.DISPUTED=Disputed
 SynchronizationSituationType.LINKED=Linked
 SynchronizationSituationType.UNLINKED=Unlinked
+channel.null=Choose One
+Channel.liveSync=Live Synchronization
+Channel.reconciliation=Reconciliation
+Channel.discovery=Discovery
+Channel.import=Import
+Channel.user=User
+Channel.webService=Web Service
