--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/modal/MappingEditorDialog.properties
@@ -45,5 +45,12 @@ Language.GROOVY=Groovy (default)
 Language.XPATH=XPath
 Language.JAVASCRIPT=Javascript
 ExpressionEvaluatorType.null=Choose one
+Channel.null=Choose One
+Channel.liveSync=Live Synchronization
+Channel.reconciliation=Reconciliation
+Channel.discovery=Discovery
+Channel.import=Import
+Channel.user=User
+Channel.webService=Web Service
 
 MappingEditorDialog.message.cantSave=Couldn't save mapping. Reason:
