Abort + showing projector operation.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/PageUser.properties
@@ -24,6 +24,7 @@ pageUser.accounts=Accounts
 pageUser.assignments=Assignments
 pageUser.tasks=Tasks
 pageUser.button.save=Save
+pageUser.button.abort=Abort
 pageUser.button.back=Back
 pageUser.button.enable=Enable
 pageUser.button.disable=Disable
