--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ExecuteChangeOptionsPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/page/admin/users/component/ExecuteChangeOptionsPanel.properties
@@ -18,3 +18,4 @@ ExecuteChangeOptionsPanel.options=Options
 ExecuteChangeOptionsPanel.label.force=Force
 ExecuteChangeOptionsPanel.label.reconcile=Reconcile
 ExecuteChangeOptionsPanel.label.executeAfterAllApprovals=Execute after all approvals
+ExecuteChangeOptionsPanel.label.keepDisplayingResults=Keep displaying results
