--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -187,6 +187,7 @@ AssignmentPolicyEnforcementType.FULL=Full
 
 ActivityType.NOTIFICATIONS=Sending notifications
 ActivityType.WORKFLOWS=Considering or starting workflows
+ActivityType.PROJECTOR=Computing projections of the focus object
 ActivityType.FOCUS_OPERATION=Operation on focus object (repository)
 ActivityType.RESOURCE_OBJECT_OPERATION=Operation on resource object
 
