--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/SynchronizationReactionEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/SynchronizationReactionEditor.properties
@@ -13,6 +13,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 #
+
 SynchronizationReactionEditor.label.edit=Edit '{0}' Reaction
 SynchronizationReactionEditor.label.new=Create New Reaction
 SynchronizationReactionEditor.label.name=Name
@@ -29,10 +30,13 @@ SynchronizationSituationType.UNMATCHED=Unmatched
 SynchronizationSituationType.DISPUTED=Disputed
 SynchronizationSituationType.LINKED=Linked
 SynchronizationSituationType.UNLINKED=Unlinked
-channel.null=Choose One
+channel.nullValid=Choose One
 Channel.liveSync=Live Synchronization
 Channel.reconciliation=Reconciliation
 Channel.discovery=Discovery
 Channel.import=Import
 Channel.user=User
 Channel.webService=Web Service
+
+situation.nullValid=Choose One
+objectTemplateRef.nullValid=Choose One
