Showing touched resource object names. Abort implemented more seriously. Made progress reporting configurable. Streamlined the implementation.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -195,6 +195,14 @@ ShadowKindType.ACCOUNT=Account
 ShadowKindType.ENTITLEMENT=Entitlement
 ShadowKindType.GENERIC=Generic object
 
+past.ChangeType.ADD=Added
+past.ChangeType.MODIFY=Modified
+past.ChangeType.DELETE=Deleted
+
+ChangeType.ADD=Add
+ChangeType.MODIFY=Modify
+ChangeType.DELETE=Delete
+
 MailTransportSecurityType.NONE=None
 MailTransportSecurityType.STARTTLS_ENABLED=StartTLS enabled
 MailTransportSecurityType.STARTTLS_REQUIRED=StartTLS required
