Resource Wizard - Sync step update - save functionality implemented. Better handling of expressions - adding namespaces before processing expression.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/Wizard.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/Wizard.properties
@@ -19,3 +19,4 @@ org.apache.wicket.extensions.wizard.next=Next
 org.apache.wicket.extensions.wizard.last=Last
 org.apache.wicket.extensions.wizard.cancel=Cancel
 org.apache.wicket.extensions.wizard.finish=Finish
+Wizard.message.cancel=Resource editing was canceled
