--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SynchronizationStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SynchronizationStep.properties
@@ -32,6 +32,7 @@ SynchronizationStep.label.reconcile=Reconcile
 SynchronizationStep.label.opportunistic=Opportunistic
 SynchronizationStep.label.correlation=Correlation
 SynchronizationStep.label.reaction=Reaction
+SynchronizationStep.label.notSpecified=(name not specified)
 
 SynchronizationStep.button.add=Add Synchronization Object
 
