Resource Wizard update:   - fix for handlerUri values in SynchronizationActionEditor,   - fix for default strength value in mappings,   - SchemaStep redesign of styles to look more like other steps,   - SchemaStep - implementation of missing parts (pagination, detailsPanel etc.)   - uniication of other steps (CSS styles, offsets of columns + fixes for smaller screen resolutions),   - SearchFilterType editor implementation   - Implementation of editor for filterClauses in sync. correlation editor - one issue remains.

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SynchronizationStep.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/SynchronizationStep.properties
@@ -42,3 +42,8 @@ ShadowKindType.GENERIC=Generic
 
 SynchronizationStep.message.errorLoadingObjectSyncList=Couldn't load object synchronization list from resource. Error:
 SynchronizationStep.message.errorLoadingObjectTemplates=Couldn't load object templates from repository.
+SynchronizationStep.message.cantSave=Couldn't save resource synchronization.
+
+objectSyncConfig.editorKind.nullValid=Choose One
+objectSyncConfig.editorFocus.nullValid=Choose One
+objectSyncConfig.editorObjectTemplate.nullValid=Choose One
