--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/SchemaListPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/SchemaListPanel.properties
@@ -24,3 +24,10 @@ SchemaListPanel.displayName=Display name
 SchemaListPanel.displayOrder=Order
 SchemaListPanel.returnedByDefault=Returned by default
 SchemaListPanel.nativeAttributeName=Native attribute name
+SchemaListPanel.details.displayName=Display name
+SchemaListPanel.details.description=Description
+SchemaListPanel.details.kind=Kind
+SchemaListPanel.details.intent=Intent
+SchemaListPanel.details.nativeObjectClass=Native obj. class
+SchemaListPanel.details.default=Default
+SchemaListPanel.details.kindDefault=Kind default
