--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAssociationEditor.properties
@@ -48,3 +48,10 @@ ShadowKindType.GENERIC=Generic
 ResourceObjectAssociationDirectionType.OBJECT_TO_SUBJECT=Object to subject
 ResourceObjectAssociationDirectionType.SUBJECT_TO_OBJECT=Subject to object
 
+kind.nullValid=Choose One
+direction.nullvalid=Choose One
+associationAttribute.nullValid=Choose One
+valueAttribute.nullValid=Choose One
+fetchSrategy.nullValid=Choose One
+matchingRule.nullValid=Choose One
+
