--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAttributeEditor.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/schemahandling/ResourceAttributeEditor.properties
@@ -31,3 +31,5 @@ ResourceAttributeEditor.label.inbound=Inbound
 ResourceAttributeEditor.message.cantParseSchema=Couldn't parse resource schema
 AttributeFetchStrategyType.IMPLICIT=Implicit
 AttributeFetchStrategyType.EXPLICIT=Explicit
+matchingRule.nullValid=Choose One
+fetchStrategy.nulLValid=Choose One
