--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/SynchronizationActionEditorDialog.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/wizard/resource/component/synchronization/SynchronizationActionEditorDialog.properties
@@ -29,4 +29,15 @@ HandlerUriActions.ACTION_DELETE_FOCUS=Delete focus
 HandlerUriActions.ACTION_INACTIVE_FOCUS=Inactive focus
 HandlerUriActions.ACTION_DELETE_SHADOW=Delete shadow
 HandlerUriActions.ACTION_INACTIVE_SHADOW=Inactive shadow
+HandlerUriActions.ACTION_SYNCHRONIZE=Synchronize
+HandlerUriActions.ACTION_ADD_USER=Add user
+HandlerUriActions.ACTION_MODIFY_USER=Modify user
+HandlerUriActions.ACTION_DISABLE_USER=Disable user
+HandlerUriActions.ACTION_DELETE_USER=Delete user
+HandlerUriActions.ACTION_ADD_ACCOUNT=Add account
+HandlerUriActions.ACTION_LINK_ACCOUNT=Link account
+HandlerUriActions.ACTION_UNLINK_ACCOUNT=Unlink account
+HandlerUriActions.ACTION_DELETE_ACCOUNT=Delete account
+HandlerUriActions.ACTION_DISABLE_ACCOUNT=Disable account
+HandlerUriActions.ACTION_MODIFY_PASSWORD=Modify password
 
