Optimization: adding/deleting all parents and all children of a node at once. Enhanced testing (comparing closure table with freshly computed one).

--- a/repo/repo-sql-impl-test/pom.xml
+++ b/repo/repo-sql-impl-test/pom.xml
@@ -70,6 +70,12 @@
             <version>0.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>colt</groupId>
+            <artifactId>colt</artifactId>
+            <version>1.2.0</version>
+            <scope>test</scope>
+        </dependency>
 
         <dependency>
             <groupId>com.evolveum.midpoint.infra</groupId>
