Resource Wizard update:   - Fixed bug with incorrect <inbound/> and <outbound/> mapping handling   - improving getting information label for mappings in wizard   - small fix for condition labels in correlation editor

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/ExpressionEditorPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/ExpressionEditorPanel.properties
@@ -15,7 +15,7 @@
 #
 
 ExpressionEditorPanel.label.type=Expression Type
-ExpressionEditorPanel.label.language=Expression Language
+ExpressionEditorPanel.label.language=Language
 ExpressionEditorPanel.label.valuePolicyRef=Policy Ref.
 ExpressionEditorPanel.label.expression=Expression
 ExpressionEditorPanel.button.expressionSave=Update Expression
