--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -539,3 +539,4 @@ operation.com.evolveum.midpoint.model.impl.controller.ModelDiagController.reposi
 operation.com.evolveum.midpoint.common.crypto.CryptoUtil.securitySelfTest=Security self test
 
 TextField.universal.placeholder=Insert value
+MultiValueField.nameNotSpecified=(Name not specified)
