--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/ExpressionEditorPanel.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/component/input/ExpressionEditorPanel.properties
@@ -24,6 +24,7 @@ ExpressionEditorPanel.message.cantSerialize=Could not create JAXBElement<?> from
 ExpressionEditorPanel.message.expressionSuccess=Expression has been update successfully.
 
 policyRef.nullValid=Choose One
+type.nullValid=Choose One
 ExpressionEvaluatorType.LITERAL=Literal
 ExpressionEvaluatorType.AS_IS=As is
 ExpressionEvaluatorType.PATH=Path
