Resource Wizard update - fixing mapping label creation and a few minor issues on the way

--- a/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
+++ b/gui/admin-gui/src/main/java/com/evolveum/midpoint/web/security/MidPointApplication.properties
@@ -538,5 +538,6 @@ operation.com.evolveum.midpoint.model.controller.ModelController.searchObjects=S
 operation.com.evolveum.midpoint.model.impl.controller.ModelDiagController.repositorySelfTest.user=Repository self test, user (Model)
 operation.com.evolveum.midpoint.common.crypto.CryptoUtil.securitySelfTest=Security self test
 
+MappingType.label.placeholder=Create new mapping
 TextField.universal.placeholder=Insert value
 MultiValueField.nameNotSpecified=(Name not specified)
