Created "dbtest" profile for extensive db-specific tests (multithreaded consistency, performance). Small test fixes.

--- a/repo/repo-sql-impl-test/pom.xml
+++ b/repo/repo-sql-impl-test/pom.xml
@@ -108,5 +108,24 @@
                 </plugins>
             </build>
         </profile>
+        <profile>
+            <id>dbtest</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <suiteXmlFiles>
+                                <suiteXmlFile>testng.xml</suiteXmlFile>
+                                <suiteXmlFile>testng-db-specific.xml</suiteXmlFile>
+                            </suiteXmlFiles>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
     </profiles>
 </project>
