--- a/model/model-impl/pom.xml
+++ b/model/model-impl/pom.xml
@@ -63,6 +63,11 @@
 		</dependency>
 		<dependency>
 			<groupId>com.evolveum.midpoint.repo</groupId>
+			<artifactId>system-init</artifactId>
+			<version>3.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>com.evolveum.midpoint.repo</groupId>
 			<artifactId>repo-api</artifactId>
 			<version>3.1-SNAPSHOT</version>
 		</dependency>
